# Rustcomb

./: .gitignore  Cargo.toml  README.md  test_file copy 7.txt
benches/: file_generation.rs  my_benchmark.rs
src/: file_generations.rs  lib.rs  main.rs  my_regex.rs
test_file_direction/: test_file copy 86.txt
test_files/: heavy_file.txt  light_file.txt  medium_file.txt
