[package]
name = "rustcomb"
version = "0.1.0"
edition = "2024"

[[bin]] # Explicit binary target
name = "rustcomb"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.31", features = ["derive"] }
crossbeam-channel = "0.5.14"
dotenv = "0.15.0"
ittapi = "0.4.0"
lazy_static = "1.5.0"
memmap2 = "0.9.5"
num_cpus = "1.16.0"
rayon = "1.10.0"
regex = "1.11.1"
threadpool = "1.8.1"
walkdir = "2.5.0"
wild = "2.2.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.3"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
debug = 1
